fixed spacing in hero image h1,h3

--- a/aboutMe.scss
+++ b/aboutMe.scss
@@ -61,10 +61,10 @@ li {
     color: $heroTextColor;
      
         h1 {
-            padding-bottom: 1.3em;
+            padding-bottom: .5em;
         }
         h3 {
-            padding-bottom: 1.05em;
+            padding-bottom: 2em;
         }
 
 }
